--- a/views/services/eosio.ejs
+++ b/views/services/eosio.ejs
@@ -56,8 +56,7 @@
         <div class="container">
             <div class="why-graphene-content why-eosio">
                 <h2>为什么选择EOSIO？</h2>
-                <div class="h4 gor-100">在通用的智能合约平台上构建和运行的分散式应用程序可为您的业务运营提供动力。获得等同于Web
-                    2.0应用程序的速度和易用性，基于角色的安全性，无限的可伸缩性，智能合约互锁，快速开发和部署。</div>
+                <div class="h4 gor-100">在通用的智能合约平台上构建和运行去中心化的应用程序可以为您企业的业务运营提供动力。拥有和传统程序的速度和健壮性，基于角色的安全控制，无限的可扩展性，智能合约互锁，快速开发和部署。</div>
                 <div class="point-list point-list-accordion">
                     <div class="row">
 
@@ -72,9 +71,9 @@
 
                         <div class="col-md-4">
                             <div class="point point-accordion">
-                                <h3>可扩展性已解决</h3>
+                                <h3>拓展性问题已经解决</h3>
                                 <div class="text">
-                                    <p>EOSIO支持数千个商业规模的Dapp。DPoS区块链结构使操作保持在链上并允许使用不受限制地扩展。</p>
+                                    <p>EOSIO支持数千个商业规模的Dapp。DPoS区块链结构使操作保持在链上并允许无限拓展。</p>
                                 </div>
                             </div>
                         </div>
@@ -96,12 +95,12 @@
                     <div class="row">
                         <div class="col-md-6">
                             <div class="h4">
-                                <p>EOSIO Dapps建立在全球最快的公共​​区块链上，可以改善数据安全和速度至关重要的每个业务功能。</p>
+                                <p>EOSIO Dapps建立在全球最快的公链上，它是改善数据安全和速度至关重要的因素 。</p>
                             </div>
                         </div>
                         <div class="col-md-6">
-                            <p>EOSIO Dapps易于使用，闪电般快速且可无限扩展，可为您的业务流程提供安全性，透明性和自动化。</p>
-                            <p>EOSIO基于DPoS共识算法构建，目前能够以500Ms的块间隔在1,000到6,000
+                            <p>EOSIO Dapps使用简单，闪电般快速且可无限扩展，可为您的业务流程提供安全性，透明和自动化。</p>
+                            <p>EOSIO基于DPoS共识算法构建，目前能够以500M/s的块间隔在1,000到6,000
                                 TPS之间运行，并且有望更快。可用性，可扩展性，多功能智能合约，API和高性能使其成为企业的理想选择。</p>
                         </div>
                     </div>
