--- a/views/services/research-and-development.ejs
+++ b/views/services/research-and-development.ejs
@@ -40,7 +40,7 @@
             <div class="row">
                 <div class="col-lg-8 col-sm-12">
                     <h1>区块链研发服务</h1>
-                    <div class="h2-banner">用区块链转变业务</div>
+                    <div class="h2-banner">用区块链改变您的业务</div>
                     <div class="text">OpenLedger确保将区块链技术完美地集成到您的运营和当前平台中。</div>
                     <a href="#contact" class="link">获取免费报价</a>
                     <div class="bg"></div>
@@ -52,8 +52,8 @@
 
         <div class="container">
             <div class="research-who-is-this">
-                <h2>这是给谁的？</h2>
-                <div class="h4 gor-100">对于任何规模的企业，对于任何行业，我们都准备好调查，构建和推出基于区块链的项目。</div>
+                <h2>什么样的行业或者企业能够使用我们提供的区块链技术？</h2>
+                <div class="h4 gor-100">对于任何规模的企业，任何行业，我们都做好了调查的准备。帮助您的企业量身打造基于区块链的项目。</div>
                 <div class="gor-100">
                     <div class="row advisory-icons hyperledger-icons research-development-icons">
                         <div class="col-lg-4 df mw-300">
@@ -73,7 +73,7 @@
 
                         <div class="col-lg-4 df mw-300">
                             <div class="ico ico-1"></div>
-                            <h3>跨国公司</h3>
+                            <h3>跨国大型公司</h3>
                         </div>
 
                         <div class="col-lg-4 df mw-300">
@@ -83,7 +83,7 @@
 
                         <div class="col-lg-4 df mw-300">
                             <div class="ico ico-1"></div>
-                            <h3>非营利组织</h3>
+                            <h3>任何非营利组织</h3>
                         </div>
                     </div>
                 </div>
@@ -133,7 +133,7 @@
                             <div class="manufacturer-point-content">
                                 <div class="solid-arrow"></div>
                                 <ul class="manufacturer-point-list manufacturer-list">
-                                    <li>我们的团队评估该项目，以确定其满足外部或内部需求的程度。我们将进行比较分析，以指出该项目相对于现有竞争对手的优缺点。</li>
+                                    <li>我们的团队会评估您的项目，确定满足市场或您公司内部需求的程度。我们还会进行比较分析，以指出该项目相对于现有竞争对手的优缺点。</li>
                                 </ul>
                             </div>
                         </div>
@@ -144,7 +144,7 @@
                             <div class="manufacturer-point-content">
                                 <div class="solid-arrow"></div>
                                 <ul class="manufacturer-point-list manufacturer-list">
-                                    <li>研发部门定义项目，行业或竞争对手的用例：创建角色并确定其目标，定义条件，描述活动和交互并将所有内容转移到项目需求中。</li>
+                                    <li>研发部门定义项目，行业或竞争对手的用例：创建角色并确定其目标，定义条件，描述其活动和交互并将所有内容转移到项目需求中。</li>
                                 </ul>
                             </div>
                         </div>
@@ -155,7 +155,7 @@
                             <div class="manufacturer-point-content">
                                 <div class="solid-arrow"></div>
                                 <ul class="manufacturer-point-list manufacturer-list">
-                                    <li>我们的区块链专家评估和审查项目需求，定义实施当前解决方案所需的技术，区块链平台，框架和工具。</li>
+                                    <li>我们的区块链专家评估和审查项目需求，定义落地当前解决方案所需的技术（区块链平台、框架、其它工具等）。</li>
                                 </ul>
                             </div>
                         </div>
@@ -165,7 +165,7 @@
                             </div>
                             <div class="manufacturer-point-content">
                                 <ul class="manufacturer-point-list manufacturer-list">
-                                    <li>我们进行试点项目和概念验证，以在运行大型项目之前识别，评估和演示区块链解决方案的工作，成本和结果。</li>
+                                    <li>我们会对项目进行试点和概念的验证，让大型项目在正式运行之前识别、评估和演示区块链解决方案的工作，成本和结果。</li>
                                 </ul>
                             </div>
                         </div>
@@ -193,7 +193,7 @@
             </div>
         </div><!-- Quote -->
 
-        <div class="research-blockchain-workshops">
+        <!-- <div class="research-blockchain-workshops">
             <div class="container">
                 <h2>区块链研讨会</h2>
                 <div class="gor-100">
@@ -212,7 +212,7 @@
                 </div>
                 <hr>
             </div>
-        </div>
+        </div> -->
         <div class="research-blockchain-consulting">
             <div class="container">
                 <div>
@@ -222,7 +222,7 @@
                 <div class="become-expert-content">
                     <div class="row">
                         <div class="col-lg-4">
-                            <h3 class="H3">无论您需要什么项目阶段的帮助，我们都准备好分享我们的专业知识并改善您的业务运营。</h3>
+                            <h3 class="H3">不管您的项目需要什么样的帮助，我们都准备好了用我们的专业知识改善您的业务运营。</h3>
                         </div>
                         <div class="col-lg-4">
                             <div class="row bold-list">
@@ -237,9 +237,9 @@
                         <div class="col-lg-4">
                             <div class="row bold-list">
                                 <ul>
-                                    <li>区块链安全建议</li>
+                                    <li>区块链安全方面建议</li>
                                     <li>基于区块链的解决方案的法律支持</li>
-                                    <li>端到端咨询服务</li>
+                                    <li>点对点的咨询服务</li>
                                 </ul>
                             </div>
                         </div>
@@ -251,13 +251,13 @@
         <div class="research-expertise">
             <div class="container">
                 <h2>我们在区块链开发方面的专业知识</h2>
-                <div class="h4 gor-100">我们帮助合作伙伴从一系列行业领导者中选择最合适的区块链技术，包括Hyperledger，BitShares，EOSIO和Ethereum。</div>
+                <div class="h4 gor-100">我们帮助合作伙伴从一系列行业领导者中选择最合适的区块链技术，包括超级账本，比特股，EOSIO和以太坊。</div>
                 <div class="gor-100">
                     <div class="row advisory-icons sc-icons retail-icons research-expertise-icons">
 
                         <div class="col-lg-6 col-md-12 col-sm-12 df">
                             <div class="ico"></div>
-                            <h3>公共和私有区块链</h3>
+                            <h3>公有链和私有链</h3>
                         </div>
 
                         <div class="col-lg-6 col-md-12 col-sm-12 df">
