--- a/views/solutions/supply-chain.ejs
+++ b/views/solutions/supply-chain.ejs
@@ -39,10 +39,9 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-8 col-sm-12">
-                    <h1>Blockchain development for supply chains</h1>
-                    <div class="h2-banner h2-banner-indents">Blockchain ensures rationalized processes, <br> transparent
-                        operations, and full asset control.</div>
-                    <a href="#contact" class="link">Get a Quote</a>
+                    <h1>基于区块链技术<br>的供应链管理</h1>
+                    <div class="h2-banner h2-banner-indents">区块链可以确保您的流程更加合理化, <br>透明的运营管理和全面的资产控制</div>
+                    <a href="#contact" class="link">获取报价</a>
                     <div class="bg"></div>
                 </div>
             </div>
@@ -52,25 +51,24 @@
     <div class="content">
 
         <div class="container text_challenges-block">
-            <h2>Typical supply chain industry challenges</h2>
+            <h2>传统的供应链存在如下问题</h2>
             <div class="row">
                 <div class="col-md-4 font-weight-bold">
-                    <p>From smaller wholesalers to global enterprise companies in product supply and distribution, every
-                        organization’s supply chain faces the same hazards and obstacles:</p>
+                    <p>从小规模的批发商到经销商或是全球跨国贸易公司得供应链都存在着相同的危险和障碍</p>
                 </div>
                 <div class="col-md-4 text_challenges_2-md">
                     <ul>
-                        <li>Scattered, delayed, incomplete, unreliable information available to chain members</li>
-                        <li>Undue costs attached to inventory management and paperwork</li>
-                        <li>Natural disasters, unforeseen shortages, demand spikes</li>
+                        <li>供应链成员可获得到的信息分散、延迟、不完整、不可靠的信息</li>
+                        <li>库存管理和文档工作产生的成本</li>
+                        <li>自然灾害、无法预见的事情使需求激增</li>
                     </ul>
                 </div>
                 <div class="col-md-4">
                     <ul>
-                        <li>Insufficient traceability of assets</li>
-                        <li>Fraud and theft, human error, counterfeit goods, and lack of security</li>
-                        <li>Inability to fulfill customer expectations</li>
-                        <li>Lack of universal and maintainable database</li>
+                        <li>资产的可追溯性不足</li>
+                        <li>欺诈和盗窃、人为错误、假冒伪劣商品以及安全保障的缺失</li>
+                        <li>无法满足客户的期望</li>
+                        <li>缺乏通用且可维护的数据库</li>
                     </ul>
                 </div>
             </div>
