--- a/views/index.ejs
+++ b/views/index.ejs
@@ -69,11 +69,13 @@
             <div class="row">
                 <div class="col-md-6 col-sm-12">
                     <h1>用区块链技术优化<br>您现有的业务模式</h1>
-                    <div class="h2-banner h2-border color-white">将区块链技术和您所在的行业相结合<br>为创业公司提供技术支持<br>帮助您的企业简化流程 提高效率 确保公平
+                    <div class="h2-banner h2-border color-white">
+                        将区块链技术和您所在的行业相结合<br>为创业公司提供技术支持<br>帮助您的企业简化流程 提高效率 确保公平
                         公正</div>
                     <div class="banner-text">
-                        OpenLedger专门提供区块链的技术开发服务和定制化开发属于自己的公私链。<br><br>随着时代的发展和技术的进步，我们真正意义上的从技术角度去推动各个行业的发展以及模式的转变。<br><br>
-                        基于世界一流的开源的区块链系统提供针对于某一行业的区块链技术解决方案或者开发属于自己的底层区块链系统
+                        OpenLedger提供区块链技术解决方案和定制化区块链开发，用技术去推动各个行业商业模式的转变，为真正的商业转型提供动力。
+                        <br><br>基于革命性的去中心化网络来构建新业务工具，永远改变您的行业。
+                        <br><br>在我们提供的区块链技术服务上建立您的愿景,或者创建您自己的网络并完全分布式和安全地在上面经营您的业务。
                     </div>
                 </div>
                 <div class="col-md-6 banner-bg d-none d-md-block"></div>
