--- a/views/solutions/supply-chain.ejs
+++ b/views/solutions/supply-chain.ejs
@@ -130,14 +130,13 @@
                             <div class="row">
                                 <div class="col-lg-6 col-md-12">
                                     <div class="olway-slide-info">
-                                        <h4>Blockchain solution for tracking consignments</h4>
-                                        <h6>OLWay is a logistics and supply chain ecosystem integrated with IoT
-                                            platforms to make shipping more transparent.</h6>
-                                        <p>It allows tracking shipments using data from sensors, GPS trackers, and
-                                            connected devices. The data is stored on the blockchain, enabling real-time
-                                            information sharing for smooth transshipment and cross-border transactions.
+                                        <h4>基于区块链技术的货物跟踪解决方案</h4>
+                                        <!-- <h6>OLWay is a logistics and supply chain ecosystem integrated with IoT
+                                            platforms to make shipping more transparent.</h6> -->
+                                        <p>
+                                            我们开发的货物跟踪平台它允许使用传感器，GPS跟踪器等感应设备连接。 将数据存储在区块链上，实现实时信息共享，以实现顺利的转运和跨境交易。
                                         </p>
-                                        <a class="link modal-demo" href="#!">Request a Demo</a>
+                                        <!-- <a class="link modal-demo" href="#!">Request a Demo</a> -->
                                     </div>
                                 </div>
                                 <div class="col-lg-6 col-md-12">
