--- a/views/common/footer.ejs
+++ b/views/common/footer.ejs
@@ -15,18 +15,18 @@
                     </div>
                 </div>
                 <div class="col-md-6 reason">
-                    <h3>不断的创新</h3>
+                    <h3>专业的开发团队</h3>
                     <div class="desc">
-                        <p>一直探索区块链的前沿领域并应用到社会中</p>
+                        <p>我们所有的技术解决方案都是由具有相关领域的专业知识的团队来进行设计。</p>
                     </div>
                     <div class="icon icon2">
                         <img alt="Cutting-edge solutions" src="/images/Why/icon2.svg" />
                     </div>
                 </div>
                 <div class="col-md-6 reason">
-                    <h3>提供最优解决方案</h3>
+                    <h3>优秀的技术解决方案</h3>
                     <div class="desc">
-                        <p>技术解决方案由跨行业的专业技术人员设计</p>
+                        <p>我们的团队一直关注和学习区块链最前沿的技术，并利用它来助力您公司业务的改进。</p>
                     </div>
                     <div class="icon icon3">
                         <img alt="Highly-skilled dev team" src="/images/Why/icon3.svg" />
@@ -35,7 +35,7 @@
                 <div class="col-md-6 reason">
                     <h3>技术精湛的研发人员</h3>
                     <div class="desc">
-                        <p>平均超过十年以上的研发经验。</p>
+                        <p>平均超过十年以上的研发经验,能深入研究并提供最适用的解决方法，让区块链技术无缝融合进来以改进您的产品和服务。</p>
                     </div>
                     <div class="icon icon4">
                         <img alt="Profound R&D " src="/images/Why/icon4.svg" />
@@ -51,8 +51,9 @@
 <div id="contact" class="container">
     <div class="contact-block">
         <h2>联系OpenLedger</h2>
-        <p>让我们与您有关我们的区块链产品，解决方案和服务的问题保持一致。</p>
-        <form id="about_form" action="/" method="post" enctype="application/x-www-form-urlencoded" class="needs-validation" novalidate>
+        <p>如果您对我们的区块链解决方案和服务有任何疑问，请联系我们。</p>
+        <form id="about_form" action="/" method="post" enctype="application/x-www-form-urlencoded"
+            class="needs-validation" novalidate>
             <div class="row">
                 <div class="col-md-6">
                     <div class="form-row">
