--- a/views/services/blockchain-development.ejs
+++ b/views/services/blockchain-development.ejs
@@ -39,7 +39,7 @@
             <div class="row">
                 <div class="col-md-6 col-sm-12">
                     <h1>使用区块链技术开发您的业务</h1>
-                    <div class="h2-banner h2-border color-white">我们提供可影响您整个行业的区块链技术服务和解决方案</div>
+                    <div class="h2-banner h2-border color-white">我们的研发团队提供完善的区块链定制化开发和技术解决方案，用技术助力你的行业。</div>
                     <a href="#contact" class="link">现在联系</a>
                 </div>
                 <div class="col-md-6 banner-bg d-none d-md-block"></div>
@@ -51,8 +51,8 @@
 
         <div class="container">
             <div class="bubbles-wrap">
-                <h2>区块链技术渗透到的行业</h2>
-                <div class="h4 gor-100">区块链技术正在推动或者说是颠覆各行各业的发展包括：</div>
+                <h2>区块链技术已经渗透到各行业</h2>
+                <div class="h4 gor-100">区块链技术正在推动或者开始颠覆许多行业的发展理念，包括：</div>
                 <div class="bubbles">
                     <div class="bubble bubble-1 s-130">保险</div>
                     <div class="bubble bubble-2 s-90">法律</div>
@@ -82,7 +82,7 @@
                     <div class="col-md-6 col-sm-12">
                         <div class="block-call__text-btn">
                             <h2>获取免费报价</h2>
-                            <p>给我们发送有关您未来项目的电话，我们将在一个工作日内与您联系以提供详细信息</p>
+                            <p>如果您对我们的区块链解决方案和服务有任何疑问，请联系我们。我们将会以最快的速度给您回复！</p>
                             <a href="#contact">联系我们</a>
                         </div>
                     </div>
@@ -351,7 +351,7 @@
 
     <!-- Common Footer -->
     <% include ../common/footer.ejs %>
-    <!-- Common Footer End -->
+                        <!-- Common Footer End -->
 </body>
 
 </html>
