--- a/views/services/eosio.ejs
+++ b/views/services/eosio.ejs
@@ -56,7 +56,8 @@
         <div class="container">
             <div class="why-graphene-content why-eosio">
                 <h2>为什么选择EOSIO？</h2>
-                <div class="h4 gor-100">在通用的智能合约平台上构建和运行去中心化的应用程序可以为您企业的业务运营提供动力。拥有和传统程序的速度和健壮性，基于角色的安全控制，无限的可扩展性，智能合约互锁，快速开发和部署。</div>
+                <div class="h4 gor-100">
+                    在通用的智能合约平台上构建和运行去中心化的应用程序可以为您企业的业务运营提供动力。拥有和传统程序的速度和健壮性，基于角色的安全控制，无限的可扩展性，智能合约互锁，快速开发和部署。</div>
                 <div class="point-list point-list-accordion">
                     <div class="row">
 
@@ -110,7 +111,7 @@
                     <div class="col-md-6">
                         <div class="tile tile-collapse">
                             <h3>智能合约API</h3>
-                            <div class="text">使用C和C ++中的EOSIO API将EOSIO智能合约构建到您现有的业务软件中。随时随地获得EOSIO智能合约的效率和安全性。<div
+                            <div class="text">使用C和C++中的EOSIO API将EOSIO智能合约构建到您现有的业务软件中。随时随地获得EOSIO智能合约的效率和安全性。<div
                                     class="fade-out"></div>
                             </div>
                         </div>
