--- a/views/solutions/automotive.ejs
+++ b/views/solutions/automotive.ejs
@@ -376,132 +376,7 @@
                 <hr class="grey-divider">
             </div>
         </div>
-        <div class="explore-blockchain-solutions">
-            <div class="container">
-                <h2 class="big-black-title">Explore blockchain solutions for:</h2>
-                <div class="explore-blockchain-solutions-content">
-                    <div class="slider-explore-blockchain-solutions">
-
-                        <div class="explore-slide">
-                            <div class="explore-slide-icon">
-                                <img src="https://openledger.info/wp-content/uploads/2018/12/01.svg" alt="Supply chain">
-                            </div>
-                            <h3 class="explore-slide-title">Supply chain</h3>
-                            <p class="explore-slide-desc">If you’re interested in the full range of blockchain solutions
-                                for supply chains, we have the experience and expertise to deliver.</p>
-                            <a href="/solutions/blockchain-supply-chain/" class="explore-slide-link link">Learn More</a>
-                        </div>
-
-                        <div class="explore-slide">
-                            <div class="explore-slide-icon">
-                                <img src="https://openledger.info/wp-content/uploads/2018/12/02.svg" alt="IoT">
-                            </div>
-                            <h3 class="explore-slide-title">IoT</h3>
-                            <p class="explore-slide-desc">OpenLedger delivers innovative solutions combining IoT with
-                                encrypted, immutable, auditable blockchains.</p>
-                            <a href="/solutions/blockchain-iot/" class="explore-slide-link link">Learn More</a>
-                        </div>
-
-                        <div class="explore-slide">
-                            <div class="explore-slide-icon">
-                                <img src="https://openledger.info/wp-content/uploads/2019/01/Logistics-1.svg"
-                                    alt="Logistics">
-                            </div>
-                            <h3 class="explore-slide-title">Logistics</h3>
-                            <p class="explore-slide-desc">Improve your logistics processes with blockchain technology to
-                                gain competitive advantage and reduce operational costs.</p>
-                            <a href="/solutions/blockchain-logistics/" class="explore-slide-link link">Learn More</a>
-                        </div>
-
-                        <div class="explore-slide">
-                            <div class="explore-slide-icon">
-                                <img src="https://openledger.info/wp-content/uploads/2019/01/Healthcare-1.svg"
-                                    alt="Healthcare">
-                            </div>
-                            <h3 class="explore-slide-title">Healthcare</h3>
-                            <p class="explore-slide-desc">Use blockchain technology for better privacy protection,
-                                efficient data exchange, and secure patient data control in healthcare.</p>
-                            <a href="/solutions/blockchain-healthcare/" class="explore-slide-link link">Learn More</a>
-                        </div>
-
-                        <div class="explore-slide">
-                            <div class="explore-slide-icon">
-                                <img src="https://openledger.info/wp-content/uploads/2019/02/real-estate.svg"
-                                    alt="Real estate">
-                            </div>
-                            <h3 class="explore-slide-title">Real estate</h3>
-                            <p class="explore-slide-desc">Explore the benefits of blockchain in real estate, including
-                                data management and financial processing optimization.</p>
-                            <a href="/solutions/blockchain-real-estate/" class="explore-slide-link link">Learn More</a>
-                        </div>
-
-                        <div class="explore-slide">
-                            <div class="explore-slide-icon">
-                                <img src="https://openledger.info/wp-content/uploads/2019/03/Insurance.svg"
-                                    alt="Insurance">
-                            </div>
-                            <h3 class="explore-slide-title">Insurance</h3>
-                            <p class="explore-slide-desc">Transform your key processes and leverage the potential of
-                                blockchain in insurance industry</p>
-                            <a href="/solutions/blockchain-insurance/" class="explore-slide-link link">Learn More</a>
-                        </div>
-
-                        <div class="explore-slide">
-                            <div class="explore-slide-icon">
-                                <img src="https://openledger.info/wp-content/uploads/2019/03/retail.svg" alt="Retail">
-                            </div>
-                            <h3 class="explore-slide-title">Retail</h3>
-                            <p class="explore-slide-desc">Build consumer trust, improve supply chain manageability,
-                                protect against counterfeit goods with blockchain for retail.</p>
-                            <a href="/solutions/blockchain-retail/" class="explore-slide-link link">Learn More</a>
-                        </div>
-
-                        <div class="explore-slide">
-                            <div class="explore-slide-icon">
-                                <img src="https://openledger.info/wp-content/uploads/2019/04/education.svg"
-                                    alt="Education">
-                            </div>
-                            <h3 class="explore-slide-title">Education</h3>
-                            <p class="explore-slide-desc">OpenLedger brings a team of experienced blockchain developers
-                                and creates custom solutions for education projects.</p>
-                            <a href="/solutions/blockchain-education/" class="explore-slide-link link">Learn More</a>
-                        </div>
-
-                        <div class="explore-slide">
-                            <div class="explore-slide-icon">
-                                <img src="https://openledger.info/wp-content/uploads/2019/04/charity.svg" alt="Charity">
-                            </div>
-                            <h3 class="explore-slide-title">Charity</h3>
-                            <p class="explore-slide-desc">Build trust with donors, recipients and other stakeholders,
-                                ensure that aid reaches the right people, and improve administration costs.</p>
-                            <a href="/solutions/blockchain-charity/" class="explore-slide-link link">Learn More</a>
-                        </div>
-
-                        <div class="explore-slide">
-                            <div class="explore-slide-icon">
-                                <img src="https://openledger.info/wp-content/uploads/2019/09/agriculture.svg"
-                                    alt="Agriculture">
-                            </div>
-                            <h3 class="explore-slide-title">Agriculture</h3>
-                            <p class="explore-slide-desc">Improve distribution, establish farm-to-shelf supply audits
-                                for producers and consumers, and reduce food fraud.</p>
-                            <a href="/solutions/blockchain-agriculture/" class="explore-slide-link link">Learn More</a>
-                        </div>
-
-                        <div class="explore-slide">
-                            <div class="explore-slide-icon">
-                                <img src="https://openledger.info/wp-content/uploads/2019/09/legal.svg" alt="Legal">
-                            </div>
-                            <h3 class="explore-slide-title">Legal</h3>
-                            <p class="explore-slide-desc">Automate the execution of agreements, provide a secure and
-                                maintainable database for documents.</p>
-                            <a href="/solutions/blockchain-legal/" class="explore-slide-link link">Learn More</a>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-
+        <% include ../common/solutions.ejs %>
     </div>
     <!-- Content End -->
 
