--- a/views/solutions/supply-chain.ejs
+++ b/views/solutions/supply-chain.ejs
@@ -384,125 +384,7 @@
             </div>
             <hr class="grey-divider dn768">
         </div>
-        <div class="explore-blockchain-solutions">
-            <div class="container">
-                <h2 class="big-black-title">我们正在探索如下领域的区块链解决方案</h2>
-                <div class="explore-blockchain-solutions-content">
-                    <div class="slider-explore-blockchain-solutions">
-
-                        <div class="explore-slide">
-                            <div class="explore-slide-icon">
-                                <img src="https://openledger.info/wp-content/uploads/2018/12/02.svg" alt="IoT">
-                            </div>
-                            <h3 class="explore-slide-title">物联网</h3>
-                            <p class="explore-slide-desc">
-                                OpenLedger提供了创新的解决方案，将物联网与加密的，不变的，可审核的区块链相结合。
-                            </p>
-                            <a href="/solutions/blockchain-iot/" class="explore-slide-link link">了解更多</a>
-                        </div>
-
-                        <div class="explore-slide">
-                            <div class="explore-slide-icon">
-                                <img src="https://openledger.info/wp-content/uploads/2019/01/Logistics-1.svg"
-                                    alt="Logistics">
-                            </div>
-                            <h3 class="explore-slide-title">物流运输</h3>
-                            <p class="explore-slide-desc">
-                                利用区块链技术改善您的物流流程，以获得竞争优势并降低运营成本。
-                            </p>
-                            <a href="/solutions/blockchain-logistics/" class="explore-slide-link link">了解更多</a>
-                        </div>
-
-                        <div class="explore-slide">
-                            <div class="explore-slide-icon">
-                                <img src="https://openledger.info/wp-content/uploads/2019/01/Healthcare-1.svg"
-                                    alt="Healthcare">
-                            </div>
-                            <h3 class="explore-slide-title">医疗健康</h3>
-                            <p class="explore-slide-desc">使用区块链技术可更好地保护隐私，有效地交换数据并在医疗保健中保护患者数据。</p>
-                            <a href="/solutions/blockchain-healthcare/" class="explore-slide-link link">了解更多</a>
-                        </div>
-
-                        <div class="explore-slide">
-                            <div class="explore-slide-icon">
-                                <img src="https://openledger.info/wp-content/uploads/2019/02/real-estate.svg"
-                                    alt="Real estate">
-                            </div>
-                            <h3 class="explore-slide-title">房地产</h3>
-                            <p class="explore-slide-desc">探索区块链在房地产中的优势，包括数据管理和财务处理优化。</p>
-                            <a href="/solutions/blockchain-real-estate/" class="explore-slide-link link">了解更多</a>
-                        </div>
-
-                        <div class="explore-slide">
-                            <div class="explore-slide-icon">
-                                <img src="https://openledger.info/wp-content/uploads/2019/03/Insurance.svg"
-                                    alt="Insurance">
-                            </div>
-                            <h3 class="explore-slide-title">保险</h3>
-                            <p class="explore-slide-desc">改变您的部分关键流程，利用区块链在保险行业中的潜力。</p>
-                            <a href="/solutions/blockchain-insurance/" class="explore-slide-link link">了解更多</a>
-                        </div>
-
-                        <div class="explore-slide">
-                            <div class="explore-slide-icon">
-                                <img src="https://openledger.info/wp-content/uploads/2019/03/automotive.svg"
-                                    alt="Automotive">
-                            </div>
-                            <h3 class="explore-slide-title">汽车行业</h3>
-                            <p class="explore-slide-desc">无论是拼车，制造，车辆跟踪，汽车互动，区块链都能为您的业务提供动力。</p>
-                            <a href="/solutions/blockchain-automotive/" class="explore-slide-link link">了解更多</a>
-                        </div>
-
-                        <div class="explore-slide">
-                            <div class="explore-slide-icon">
-                                <img src="https://openledger.info/wp-content/uploads/2019/03/retail.svg" alt="Retail">
-                            </div>
-                            <h3 class="explore-slide-title">零售</h3>
-                            <p class="explore-slide-desc">利用零售区块链建立消费者信任，提高供应链可管理性，防止假冒商品。</p>
-                            <a href="/solutions/blockchain-retail/" class="explore-slide-link link">了解更多</a>
-                        </div>
-
-                        <div class="explore-slide">
-                            <div class="explore-slide-icon">
-                                <img src="https://openledger.info/wp-content/uploads/2019/04/education.svg"
-                                    alt="Education">
-                            </div>
-                            <h3 class="explore-slide-title">教育</h3>
-                            <p class="explore-slide-desc">OpenLedger带来了一支经验丰富的区块链开发人员团队，并为教育项目创建了自定义解决方案。</p>
-                            <a href="/solutions/blockchain-education/" class="explore-slide-link link">了解更多</a>
-                        </div>
-
-                        <div class="explore-slide">
-                            <div class="explore-slide-icon">
-                                <img src="https://openledger.info/wp-content/uploads/2019/04/charity.svg" alt="Charity">
-                            </div>
-                            <h3 class="explore-slide-title">慈善机构</h3>
-                            <p class="explore-slide-desc">与捐助者，受助者和其他利益相关者建立信任，确保援助到达合适的人，并提高管理成本。</p>
-                            <a href="/solutions/blockchain-charity/" class="explore-slide-link link">了解更多</a>
-                        </div>
-
-                        <div class="explore-slide">
-                            <div class="explore-slide-icon">
-                                <img src="https://openledger.info/wp-content/uploads/2019/09/agriculture.svg"
-                                    alt="Agriculture">
-                            </div>
-                            <h3 class="explore-slide-title">农业</h3>
-                            <p class="explore-slide-desc">改善分配，为生产者和消费者建立从农场到货架的供应审核，并减少食品欺诈。</p>
-                            <a href="/solutions/blockchain-agriculture/" class="explore-slide-link link">了解更多</a>
-                        </div>
-
-                        <div class="explore-slide">
-                            <div class="explore-slide-icon">
-                                <img src="https://openledger.info/wp-content/uploads/2019/09/legal.svg" alt="Legal">
-                            </div>
-                            <h3 class="explore-slide-title">法律</h3>
-                            <p class="explore-slide-desc">自动执行协议，为文档提供安全且可维护的数据库。</p>
-                            <a href="/solutions/blockchain-legal/" class="explore-slide-link link">了解更多</a>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
+        <% include ../common/solutions.ejs %>
     </div>
     <!-- Content End -->
 
