--- a/views/solutions/supply-chain.ejs
+++ b/views/solutions/supply-chain.ejs
@@ -301,9 +301,8 @@
                     <div class="col-md-6 col-sm-12">
                         <div class="block-call__text-btn">
                             <h2>获取免费报价</h2>
-                            <p>Drop us a line about your future project, and we'll get back to you with details within
-                                one business day</p>
-                            <a href="#contact">Contact Us</a>
+                            <p>给我们发送有关您项目的电话，我们将在一个工作日内与您联系以提供详细信息</p>
+                            <a href="#contact">联系我们</a>
                         </div>
                     </div>
                 </div>
